cmp-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmp-portal
  namespace: cmp-portal-dev
  labels:
    app: cmp-portal
spec:
  type: ClusterIP
  selector:
    app: cmp-portal
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
