cmp-fe/gateway-api.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#     name: cmp-portal
#     namespace: cmp-portal-dev
#     labels:
#         app: cmp-portal
#     annotations:
#         cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
# spec:
#   gatewayClassName: envoy-gateway
#   listeners:
#         - name: http
#           hostname: cmp-portal.vnpost.vn
#           port: 80
#           protocol: HTTP
#           allowedRoutes:
#               namespaces:
#                   from: Same
#         - name: https
#           hostname: cmp-portal.vnpost.vn
#           port: 443
#           protocol: HTTPS
#           tls:
#               mode: Terminate
#               certificateRefs:
#                   - kind: Secret
#                     name: cmp-portal-tls
#           allowedRoutes:
#               namespaces:
#                   from: Same
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#     name: cmp-portal
#     namespace: cmp-portal-dev
#     labels:
#         app: cmp-portal
# spec:
#     parentRefs:
#         - name: cmp-portal
#           sectionName: http
#         - name: cmp-portal
#           sectionName: https
#     hostnames:
#         - cmp-portal.vnpost.vn
#     rules:
#         - matches:
#               - path:
#                     type: PathPrefix
#                     value: /
#           backendRefs:
#               - name: cmp-portal
#                 port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#     name: cmp-ams
#     namespace: cmp-portal-dev
#     labels:
#         app: cmp-ams
# spec:
#     parentRefs:
#         - name: cmp-portal
#           sectionName: http
#         - name: cmp-portal
#           sectionName: https
#     hostnames:
#         - cmp-portal.vnpost.vn
#     rules:
#         - matches:
#               - path:
#                     type: PathPrefix
#                     value: /ams
#           backendRefs:
#               - name: cmp-ams
#                 namespace: cmp-backend-dev
#                 port: 8080
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#     name: cmp-billing
#     namespace: cmp-portal-dev
#     labels:
#         app: cmp-billing
# spec:
#     parentRefs:
#         - name: cmp-portal
#           sectionName: http
#         - name: cmp-portal
#           sectionName: https
#     hostnames:
#         - cmp-portal.vnpost.vn
#     rules:
#         - matches:
#               - path:
#                     type: PathPrefix
#                     value: /billing
#           backendRefs:
#               - name: cmp-billing
#                 namespace: cmp-backend-dev
#                 port: 8080
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#     name: allow-cmp-portal-to-cmp-backend-services
#     namespace: cmp-backend-dev
# spec:
#     from:
#         - group: gateway.networking.k8s.io
#           kind: HTTPRoute
#           namespace: cmp-portal-dev
#     to:
#         - group: ""
#           kind: Service
#           name: cmp-ams
#         - group: ""
#           kind: Service
#           name: cmp-billing
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cmp-portal
  namespace: cmp-portal-dev
  labels:
    app: cmp-portal
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      hostname: cmp-portal.vnpost.vn
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      hostname: cmp-portal.vnpost.vn
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cmp-portal-tls
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cmp-portal-routes
  namespace: cmp-portal-dev
  labels:
    app: cmp-portal
spec:
  parentRefs:
    - name: cmp-portal
      sectionName: http
    - name: cmp-portal
      sectionName: https
  hostnames:
    - cmp-portal.vnpost.vn
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ams
      backendRefs:
        - name: cmp-ams
          namespace: cmp-backend-dev
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /billing
      backendRefs:
        - name: cmp-billing
          namespace: cmp-backend-dev
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cmp-portal
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cmp-portal-to-cmp-backend-services
  namespace: cmp-backend-dev
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cmp-portal-dev
  to:
    - group: ""
      kind: Service
      name: cmp-ams
    - group: ""
      kind: Service
      name: cmp-billing
